--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
 	"name": "com.grandouniverse.utilities",
-	"version": "0.0.1",
+	"version": "0.0.2",
 	"displayName": "Grando Universe Utilities",
 	"description": "This is a Utilities for Grando Universe game project. feel free to use it if you found it useful.",
 	"unity": "6000.0",
 	"author": {
-		"name": "LKC",
+		"name": "Grando Universe",
 		"email": "grando93290@gmail.com",
 		"url": ""
 	},
