--- a/Editor/GrandoUniverse.Editor.Utilities.asmdef
+++ b/Editor/GrandoUniverse.Editor.Utilities.asmdef
@@ -1,8 +1,10 @@
 {
-    "name": "GrandoUniverse.Utilities",
-    "rootNamespace": "",
+    "name": "GrandoUniverse.Editor.Utilities",
+    "rootNamespace": "GrandoUniverse",
     "references": [],
-    "includePlatforms": [],
+    "includePlatforms": [
+        "Editor"
+    ],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
     "overrideReferences": false,
