--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
 	"name": "com.grandouniverse.utilities",
-	"version": "0.0.13",
+	"version": "0.0.14",
 	"displayName": "Grando Universe Utilities",
 	"description": "This is a Utilities for Grando Universe game project. feel free to use it if you found it useful.",
 	"unity": "6000.0",
 	"author": {
 		"name": "Grando Universe",
-		"email": "grando93290@gmail.com",
+		"email": "grandw49536@gmail.com",
 		"url": ""
 	},
 	"dependencies": {
