--- a/Editor/GrandoUniverse.Editor.Utilities.asmdef
+++ b/Editor/GrandoUniverse.Editor.Utilities.asmdef
@@ -1,7 +1,9 @@
 {
     "name": "GrandoUniverse.Editor.Utilities",
     "rootNamespace": "GrandoUniverse",
-    "references": [],
+    "references": [
+        "GUID:69448af7b92c7f342b298e06a37122aa"
+    ],
     "includePlatforms": [
         "Editor"
     ],
