--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "com.grandouniverse.utilities",
-	"version": "0.0.15",
+	"version": "0.0.16",
 	"displayName": "Grando Universe Utilities",
 	"description": "This is a Utilities for Grando Universe game project. feel free to use it if you found it useful.",
 	"unity": "6000.0",
@@ -10,6 +10,7 @@
 		"url": ""
 	},
 	"dependencies": {
-		"com.unity.nuget.newtonsoft-json": "3.2.1"
+		"com.unity.nuget.newtonsoft-json": "3.2.1",
+		"com.unity.addressables": "2.0.8"
 	}
 }
